                          where such files exist.  Supported VCS's
                          are: CVS, Git, Bazaar, Mercurial.
			  

* Tar refuses to read input from and write output to a tty device.

* Tar avoids calling recursive rutines for directory traversal (for usual
  scenarios) to save stack-space and thus avoid segfaults for rarely deep
  archived directories.

* Manpages

This release includes official tar(1) and rmt(8) manpages.
Distribution maintainers are kindly asked to use these instead of the
home-made pages they have been providing so far.
  

version 1.27.1 - Sergey Poznyakoff, 2013-11-17

* Bug fixes

* Fix unquoting of file names obtained via the -T option.

* Fix GNU long link header timestamp (backward compatibility).

* Fix extracting sparse members from star archives.


version 1.27 - Sergey Poznyakoff, 2013-10-05

* Bug fixes

** Sparse files with large data

When creating a PAX-format archive, tar no longer arbitrarily restricts
the size of the representation of a sparse file to be less than 8 GiB.

* Quoting

In the default C locale, diagnostics and output of 'tar' have been
adjusted to quote 'like this' (with apostrophes) instead of `like this'
(with an accent grave character and an apostrophe).  This tracks
recent changes to the GNU coding standards.

* --owner and --group names and numbers

The --owner and --group options now accept operands of the form
NAME:NUM, so that you can specify both symbolic name and numeric ID
for owner and group.  In these options, NAME no longer needs to be
present in the current host's user and group databases.

* The --keep-old-files and --skip-old-files options.

This release restores the traditional functionality of the
--keep-old-files.  This option causes tar to avoid replacing
existing files while extracting and to treat such files as errors.
Tar will emit a prominent error message upon encountering such files
and will exit with code 2 when finished extracting the archive.
